# c-socket-group-chat

client/: CMakeLists.txt  main.c
server/: CMakeLists.txt  main.c
socket-util/: CMakeLists.txt  socket-util.c  socket-util.h
